# NovaIQ

./: .gitignore  README.md
work/My projects/NovaIQ/: .gitignore  README.md
work/My projects/NovaIQ/backend/: CHANGELOG.md  Dockerfile  ENV_EXAMPLE.txt  Makefile  QUICKSTART.md  REFACTOR_SUMMARY.md  SETUP.md  cli.py  pyproject.toml
work/My projects/NovaIQ/backend/app/: __init__.py  config.py  deps.py  main.py  schemas.py
work/My projects/NovaIQ/backend/app/db/: __init__.py  models.py  sqlite.py
work/My projects/NovaIQ/backend/app/services/: __init__.py  hypothesize.py  ingest.py  summarize.py  vectorstore.py
work/My projects/NovaIQ/backend/app/tasks/: __init__.py  jobs.py  schedule.py
work/My projects/NovaIQ/backend/scripts/: init_db.py
work/My projects/NovaIQ/backend/tests/: test_smoke.py
work/My projects/NovaIQ/frontend/: .env.local.example  package-lock.json  package.json
work/My projects/NovaIQ/frontend/app/: api.ts  layout.tsx  page.tsx
work/My projects/NovaIQ/frontend/components/: InsightCard.tsx
work/My projects/NovaIQ/ops/: Makefile  Procfile  docker-compose.yml
work/My projects/lovable_ditto_hackathon/: .vercelignore
